Bug 475799 - On X11, Zoom (Meta++, Meta+-) is broken for multi-screen setup
Summary: On X11, Zoom (Meta++, Meta+-) is broken for multi-screen setup
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: multi-screen (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-10-18 16:02 UTC by ratijas
Modified: 2023-10-24 12:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KWin Zoom is broken on multi-screen (2.19 MB, video/mp4)
2023-10-18 16:02 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2023-10-18 16:02:39 UTC
Created attachment 162406 [details]
KWin Zoom is broken on multi-screen

SUMMARY

I have a multiscreen setup of two monitors: normally 4K vertical on the left, and FullHD landscape on the right, both vertically centered, and global scale is 100%.  None of the relative position options matter, as I tested on various combination and hit the bug nonetheless.

When I zoom in, the picture on both monitors is replaces with a zoomed & stretches picture of the FullHD screen. Being streched to fill 4K+1K, it looks really squashed. The mouse input is not redirected where you see it, but (from what I can tell) at somewhat correct coordinates instead.

Zoom effect settings are as follow, none of them making any difference though:

Zoom Factor: 1.20
Mouse Pointer: Scale
Mouse Tracking: Push
Enable Focus Tracking: no
Enable Text Cursor Tracking: no

KScreen reports the following configuration:

Output: 446 DP-2 enabled connected priority 1 Panel Modes: 447:1920x1080@60*! Geometry: 2160,1380 1920x1080 Scale: 1 Rotation: 1 Overscan: 0 Vrr: incapable RgbRange: unknown HDR: incapable Wide Color Gamut: incapable

Output: 449 DP-3 enabled connected priority 2 DisplayPort Modes: 450:3840x2160@60*! 451:2560x1440@120 452:1920x2160@60 453:1920x1080@120 454:1920x1080@60 455:1920x1080@60 456:1920x1080@50 457:1280x1024@75 458:1280x1024@60 459:1280x720@60 460:1280x720@50 461:1024x768@120 462:1024x768@100 463:1024x768@75 464:1024x768@70 465:1024x768@60 466:800x600@120 467:800x600@100 468:800x600@75 469:800x600@72 470:800x600@60 471:800x600@56 472:720x576@50 473:720x480@60 474:640x480@120 475:640x480@100 476:640x480@75 477:640x480@73 478:640x480@60 479:640x480@60 Geometry: 0,0 2160x3840 Scale: 1 Rotation: 2 Overscan: 0 Vrr: incapable RgbRange: unknown HDR: incapable Wide Color Gamut: incapable

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Kernel Version: 6.5.7-arch1-1 (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 Nate Graham 2023-10-20 17:49:55 UTC
Works for me on Wayland with a 4K@200% and 1080p@100% screen setup. No problems arise when I rotate any of the screens.

At this point aren't multiscreen bugs on Plasma 6 X11 all WONTFIX?
Comment 2 Bug Janitor Service 2023-10-24 08:50:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4564
Comment 3 Vlad Zahorodnii 2023-10-24 12:00:31 UTC
Git commit 1cb43e8407525ee2e2aca878fd4da3328702d96e by Vlad Zahorodnii.
Committed on 24/10/2023 at 14:00.
Pushed by vladz into branch 'master'.

plugins/zoom: Fix viewport on X11

On X11, there's no per screen rendering. The primary screen is specified
as the painted screen. RenderViewport::renderRect() should be used.

M  +4    -4    src/plugins/zoom/zoom.cpp

https://invent.kde.org/plasma/kwin/-/commit/1cb43e8407525ee2e2aca878fd4da3328702d96e